unpackaged/main/default/objects/Ship_To_Addresses__c/Ship_To_Addresses__c.object-meta.xml
<CustomObject>
    <description>Ship to Addresses</description>
    <label>Ship-To Addresses</label>
    <nameField>
        <displayFormat>STA-{0000000}</displayFormat>
        <label>Ship To Addresses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ship-To Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>