unpackaged/main/default/objects/Ship_To_Addresses__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ship-To Addresses</relationshipLabel>
    <relationshipName>Ship_To_Addresses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>