unpackaged/main/default/objects/Ship_To_Addresses__c/fields/CID__c.field-meta.xml
<CustomField>
    <fullName>CID__c</fullName>
    <formula>Account__r.CID__c</formula>
    <label>CID</label>
    <type>Text</type>
</CustomField>