unpackaged/main/default/objects/Ship_To_Addresses__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Shipping City</description>
    <label>City</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>