unpackaged/main/default/objects/Ship_To_Addresses__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country</description>
    <label>Country</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>