unpackaged/main/default/objects/Ship_To_Addresses__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if ShipTo is Inactive</description>
    <inlineHelpText>ShipToAddress is considered Inactive</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>