unpackaged/main/default/objects/Ship_To_Addresses__c/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <description>Inactive Reason on Ship To</description>
    <label>Inactive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Longer at Location</fullName>
            </value>
            <value>
                <fullName>One Time Use of ShipTo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>