unpackaged/main/default/objects/Ship_To_Addresses__c/fields/P21_ID__c.field-meta.xml
<CustomField>
    <fullName>P21_ID__c</fullName>
    <description>P21 ID</description>
    <externalId>true</externalId>
    <label>P21 ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>