unpackaged/main/default/objects/Ship_To_Addresses__c/fields/Send_to_P21__c.field-meta.xml
<CustomField>
    <fullName>Send_to_P21__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to P21</label>
    <type>Checkbox</type>
</CustomField>