unpackaged/main/default/objects/Ship_To_Addresses__c/fields/Ship_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Name__c</fullName>
    <label>Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>