unpackaged/main/default/objects/Ship_To_Addresses__c/fields/State_2__c.field-meta.xml
<CustomField>
    <fullName>State_2__c</fullName>
    <description>State</description>
    <label>State 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>