unpackaged/main/default/objects/Ship_To_Addresses__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Shipping State</description>
    <label>State</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>