unpackaged/main/default/objects/Ship_To_Addresses__c/fields/Street_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_1__c</fullName>
    <description>Street Address</description>
    <label>Street Address 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>