unpackaged/main/default/objects/Ship_To_Addresses__c/fields/Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_2__c</fullName>
    <description>Street Address</description>
    <label>Street Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>