unpackaged/main/default/objects/Ship_To_Addresses__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Zip Code</description>
    <label>Zip Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>