unpackaged/main/default/objects/Ship_To_Addresses__c/validationRules/Cannot_Change_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Account</fullName>
    <active>true</active>
    <errorConditionFormula>And(Not(IsNew()), ISCHANGED(Account__c),
Not($Permission.Merge_Inactivate_Accounts))</errorConditionFormula>
    <errorMessage>Cannot change account on ship-to-address)</errorMessage>
</ValidationRule>