unpackaged/main/default/objects/Ship_To_Addresses__c/validationRules/State_must_be_2_characters.validationRule-meta.xml
<ValidationRule>
    <fullName>State_must_be_2_characters</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( State__c) &lt;&gt; 2</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>Please enter 2 character state code.</errorMessage>
</ValidationRule>